change prod properties to use env variables

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -19,10 +19,9 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/CompanyApp
-        name:
-        username: postgres
-        password: postgres
+        url: ${JDBC_DATABASE_URL}
+        username: ${JDBC_DATABASE_USERNAME}
+        password: ${JDBC_DATABASE_PASSWORD}
     jpa:
         database-platform: pl.kopacz.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
@@ -32,10 +31,10 @@ spring:
             hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: false
     mail:
-        host: localhost
-        port: 25
-        username:
-        password:
+        host: ${MAIL_HOST}
+        port: ${MAIL_PORT}
+        username: ${MAIL_USERNAME}
+        password: ${MAIL_PASSWORD}
     thymeleaf:
         cache: true
 
@@ -55,27 +54,26 @@ server:
 
 jhipster:
     http:
-        cache: # Used by the CachingHttpHeadersFilter
+        cache:
             timeToLiveInDays: 1461
     security:
         rememberMe:
-            # security key (this key should be unique for your application, and kept secret)
-            key: bf75e66595b0295bc14a142e9c7617b791a592ab
-    mail: # specific JHipster mail property, for standard properties see MailProperties
-        from: CompanyApp@localhost
-        baseUrl: # keep empty to use the server's default URL
-    metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
+            key: ${REMEMBER_ME_KEY}
+    mail:
+        from: ${MAIL_FROM}
+        baseUrl: ${MAIL_BASE_URL}
+    metrics:
         jmx.enabled: true
         graphite:
             enabled: false
             host: localhost
             port: 2003
             prefix: CompanyApp
-        logs: # Reports Dropwizard metrics in the logs
+        logs:
             enabled: false
-            reportFrequency: 60 # in seconds
+            reportFrequency: 60
     logging:
-        logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
+        logstash:
             enabled: false
             host: localhost
             port: 5000
