--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <sortpom-maven-plugin.version>2.5.0</sortpom-maven-plugin.version>
         <metrics-spring.version>3.1.3</metrics-spring.version>
         <logstash-logback-encoder.version>4.7</logstash-logback-encoder.version>
-        <postgresql.version>9.4-1203-jdbc42</postgresql.version>
+        <postgresql.version>9.4.1212</postgresql.version>
         <run.addResources>false</run.addResources>
         <spring-security.version>4.1.3.RELEASE</spring-security.version>
         <springfox.version>2.6.1</springfox.version>
